--- a/foreach/index.html
+++ b/foreach/index.html
@@ -9,11 +9,11 @@
     <title>Document</title>
 </head>
 <body>
-    
-        <div class="box">
-            <div classe="title"></div>
-        </div>
-        <div class="top"></div>
+    <div class="heart">
+        <div class="hole"></div>
+    </div>
+    <div class="heart"></div>
+    <div class="heart"></div>
     
 </body>
 </html>
