--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="src/index.js"></script>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/b958853ded.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
@@ -11,11 +12,14 @@
 <body>
     <nav>
         <img class="logo" src="images/logo.png" alt="Piotr Gryko Logo">
-        <ul class="nav-bar">
+        <ul class="nav-bar" id="nav-list">
             <li><a href="#about-me"> About me</a></li>
             <li><a href="https://github.com/seriouspig" target="_blank">GitHub</a></li>
             <li><a href="pages/contact.html">Contact me</a></li>
         </ul>
+        <button class="hamburger" id="hamburger">
+            <i class="fas fa-bars"></i>
+        </button>
     </nav>
     <div class="hero">
         <div class="hero-info">
